Printing: Read the color setting from the system dialog on Windows.

BUG=843212

Change-Id: Iab38833fabfe1c6729c76419d50e39cfe7eb098a
Reviewed-on: https://chromium-review.googlesource.com/1060384
Reviewed-by: Rebekah Potter <rbpotter@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558875}
Former-commit-id: 0c4f392def5d8c7c77cdf8a9c20385be3ef2f4f9